--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <h1>To-Do List</h1>
         <button id="add-task-btn">Add Task</button>
-        <div id="task-list"></div> <!-- Changed from ul to div for better structure -->
+        <ul id="task-list"></ul>
     </div>
+
     <script src="static/script.js"></script>
 </body>
 </html>
