--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <button id="add-btn">Add Task</button>
+        <div class="add-task-container">
+            <button id="add-btn" class="add-btn">Add Task</button>
+        </div>
         <ul id="task-list"></ul>
     </div>
 
