--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <button id="add-btn" class="add-btn">Add Task</button>
+        <button id="add-task-btn" class="add-btn">Add Task</button>
         <ul id="task-list"></ul>
     </div>
 
